syntax = "proto3";

option java_package = "org.ballerinalang.observe.trace.extension.choreo.gen";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service Telemetry {

    rpc publishMetrics (MetricsPublishRequest)
    		returns (google.protobuf.Empty);

    rpc publishTraces (TracesPublishRequest)
    		returns (google.protobuf.Empty);
}

message MetricsPublishRequest {
    string id = 1;  // ID received in the handshake
    string instanceId = 2;
    repeated Metric metrics = 3;
}

message Metric {
    int64 timestamp = 1;
    string name = 2;
    double value = 3;
    map<string, string> tags = 4;
}

message TracesPublishRequest {
    string id = 1;  // ID received in the handshake
    string instanceId = 2;
    repeated TraceSpan spans = 3;
}

message TraceSpan {
    uint64 traceId = 1;
    uint64 spanId = 2;
    string serviceName = 3;
    string operationName = 4;
    int64 timestamp = 5;
    int64 duration = 6;
    map<string, string> tags = 7;
    repeated TraceSpanReference references = 8;
}

message TraceSpanReference {
    uint64 traceId = 1;
    uint64 spanId = 2;
    TraceReferenceType refType = 3;
}

enum TraceReferenceType {
    CHILD_OF = 0;
    FOLLOWS_FROM = 1;
}
